# MyMusic

./: README.md
app/: build.gradle
app/src/androidTest/java/com/hong/mymusic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hong/mymusic/: CutActivity.java  MainActivity.java  SourceFragment.java  SourceListAdapter.java  SourceListBean.java
app/src/main/res/layout/: activity_cut.xml  activity_main.xml
app/src/test/java/com/hong/mymusic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/hong/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/cpp/: AndroidLog.h  HAudio.cpp  HAudio.h  HBufferQueue.cpp  HBufferQueue.h  HCallJava.cpp  HCallJava.h  HFFmpeg.cpp  HFFmpeg.h  HPcmBean.cpp  HPcmBean.h  HPlayStatus.cpp  HPlayStatus.h  HQueue.cpp  HQueue.h  native-lib.cpp
myplayer/src/main/cpp/include/libavformat/: avformat.h  network.h  os_support.h
myplayer/src/main/cpp/include/libavresample/: version.h
myplayer/src/main/cpp/include/libavutil/: libm.h
myplayer/src/main/cpp/soundtouch/include/: STTypes.h
myplayer/src/main/java/com/hong/myplayer/: Demo.java
myplayer/src/main/java/com/hong/myplayer/listener/: HonCompleteListener.java  HonErrorListener.java  HonLoadListener.java  HonPauseResumeListener.java  HonPcmInfoListener.java  HonPreparedListener.java  HonRecordListener.java  HonTimeInfoListener.java
myplayer/src/main/java/com/hong/myplayer/log/: LogUtil.java
myplayer/src/main/java/com/hong/myplayer/player/: HPlayer.java
myplayer/src/main/java/com/hong/myplayer/util/: HTimeUtil.java
myplayer/src/test/java/com/hong/myplayer/: ExampleUnitTest.java
